force-app/main/default/objects/Pay_Item__c/Pay_Item__c.object-meta.xml
<CustomObject>
    <description>Used by Salesman to instruct Estimator how to organize the quote</description>
    <label>Pay Item</label>
    <nameField>
        <displayFormat>Pay_Item-{00000000}</displayFormat>
        <label>Pay Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pay Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>