force-app/main/default/objects/Pay_Item__c/fields/CPQ_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Product_Name__c</fullName>
    <formula>Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPQ Product Name</label>
    <type>Text</type>
</CustomField>