force-app/main/default/objects/Pay_Item__c/fields/CPQ_QLG_Name__c.field-meta.xml
<CustomField>
    <fullName>CPQ_QLG_Name__c</fullName>
    <formula>Quote_Line_Group__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPQ Quote Line Group Name</label>
    <type>Text</type>
</CustomField>