force-app/main/default/objects/Pay_Item__c/fields/Instructions_Info__c.field-meta.xml
<CustomField>
    <fullName>Instructions_Info__c</fullName>
    <label>Instructions/Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>