force-app/main/default/objects/Pay_Item__c/fields/Klient_Project__c.field-meta.xml
<CustomField>
    <fullName>Klient_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Pay Items</relationshipLabel>
    <relationshipName>Pay_Items</relationshipName>
    <type>Lookup</type>
</CustomField>