force-app/main/default/objects/Pay_Item__c/fields/Order_in_Group__c.field-meta.xml
<CustomField>
    <fullName>Order_in_Group__c</fullName>
    <inlineHelpText>Start with 10 and increments of 10 to make inserting between easier</inlineHelpText>
    <label>Order in Group</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>