force-app/main/default/objects/Pay_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pay Item</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Is_a_Main_Product__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Pay Items from Sales</relationshipLabel>
    <relationshipName>Pay_Items</relationshipName>
    <type>Lookup</type>
</CustomField>