force-app/main/default/objects/Pay_Item__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Pay Items from Sales</relationshipLabel>
    <relationshipName>Pay_Items</relationshipName>
    <type>Lookup</type>
</CustomField>