force-app/main/default/objects/Pay_Item__c/fields/Quote_Line_Group__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SBQQ__QuoteLineGroup__c.SBQQ__Quote__c</field>
            <operation>equals</operation>
            <valueField>$Source.Quote__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SBQQ__QuoteLineGroup__c</referenceTo>
    <relationshipLabel>Pay Items from Sales</relationshipLabel>
    <relationshipName>Pay_Items</relationshipName>
    <type>Lookup</type>
</CustomField>