force-app/main/default/objects/Pay_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Instructions_Info__c</columns>
    <columns>Product__c</columns>
    <columns>Quote__c</columns>
    <columns>Quote_Line_Group__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>